--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=UMA
 APP_ENV=local
 APP_KEY=base64:dAf4VxMR4yfb5u9DvclbMBDnU5dhCt3Llr5/Vz+hgpc=
 APP_DEBUG=true
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=IHC
 DB_USERNAME=root
 DB_PASSWORD=
 
